feat: add endpoint for contact email
