# src/common/errors/internal-server.ts
@@ -1,0 +1,24 @@
+import { CustomError } from './custom-error';
+
+class InternalServerError extends Error implements CustomError {
+  statusCode: number;
+
+  constructor(message: string) {
+    super(message);
+    this.name = 'InternalServer';
+    this.statusCode = 500;
+    Object.setPrototypeOf(this, InternalServerError.prototype);
+  }
+
+  build() {
+    return {
+      body: JSON.stringify({
+        error: this.name,
+        message: this.message,
+      }),
+      statusCode: this.statusCode,
+    };
+  }
+}
+
+export { InternalServerError };
